--- a/fudo/public/stylesheets/navbar.css
+++ b/fudo/public/stylesheets/navbar.css
@@ -1,4 +1,5 @@
 div.navbar {
+	/*position: absolute;*/
     margin: 5px;
     background-color: rgba(255, 255, 255, .75);
     border-radius: 5px;
@@ -7,4 +8,5 @@ div.navbar {
 div.navbar h1 {
 	font-size: 1.5em;
 	padding: .25em;
+	display: inline-block;
 }
